ProfileService.java: "Добавлен интерфейс сервиса для работы с профилем пользователя" ProfileServiceImpl.java: "Реализация сервиса для работы с профилем пользователя" ResumeServiceImpl.java: "Реализация сервиса для управления резюме" application.properties: "Настройка конфигурации приложения и подключения к базе данных" pom.xml: "Настройка зависимостей проекта"